[gd_scene load_steps=9 format=2]

[ext_resource path="res://abilityPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/IconSet.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/fontILabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Introdile.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Prefabs/fontIRichText.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=3]

flags = 0
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 24 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="DynamicFont" id=1]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 11
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="abilityPanel" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 30.0
margin_right = 669.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="abilityHBox" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 579.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="abilityIcon" type="TextureRect" parent="abilityHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
texture = SubResource( 3 )
stretch_mode = 6
_sections_unfolded = [ "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="abilityVBox" type="VBoxContainer" parent="abilityHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_right = 579.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags", "Theme" ]

[node name="abilityName" parent="abilityHBox/abilityVBox" index="0" instance=ExtResource( 3 )]

margin_right = 443.0
margin_bottom = 26.0
size_flags_stretch_ratio = 0.1
custom_fonts/font = SubResource( 1 )
text = "AbilityName"
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="abilityDesc" parent="abilityHBox/abilityVBox" index="1" instance=ExtResource( 5 )]

margin_top = 30.0
margin_right = 443.0
margin_bottom = 171.0
size_flags_vertical = 3
bbcode_text = "This is the ability's [color=yellow]description[/color]. This will contain the written [color=yellow]description[/color], the [color=red]power[/color], [color=blue]effects[/color] tied to it, and [color=green]duration[/color] if applicable."
text = "This is the ability's description. This will contain the written description, the power, effects tied to it, and duration if applicable."
_sections_unfolded = [ "BBCode", "Size Flags", "custom_fonts" ]

[node name="abilityCooldown" parent="abilityHBox/abilityVBox" index="2" instance=ExtResource( 3 )]

margin_top = 175.0
margin_right = 443.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 2 )
text = "Cooldown: X turns"


